--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.15.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15",
+    "nodemon": "^3.1.0",
+    "validator": "^13.11.0"
   },
   "license": "MIT"
 }
